force-app/main/default/objects/Account/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <description>Brazil PSA Contract Bank information needed for payment</description>
    <inlineHelpText>Brazil PSA Contract Bank information needed for payment</inlineHelpText>
    <label>Payment Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>