force-app/main/default/objects/Account/fields/Payment_Account_Agency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Agency__c</fullName>
    <description>Brazil PSA Contract Bank Account information for payments</description>
    <inlineHelpText>Brazil PSA Contract Bank Account information for payments</inlineHelpText>
    <label>Payment Account - Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>