force-app/main/default/objects/Account/fields/Payment_Account_Bank__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account_Bank__c</fullName>
    <inlineHelpText>Brazil PSA Contract needed for payment</inlineHelpText>
    <label>Payment Account - Bank</label>
    <length>80</length>
    <type>Text</type>
</CustomField>