force-app/main/default/objects/Account/fields/Promotional_Budget_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Budget_Remaining__c</fullName>
    <formula>Promotional_Budget__c - Promotional_Budget_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotional Budget Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>