force-app/main/default/objects/Account/fields/Promotional_Budget_Used_Percent__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Budget_Used_Percent__c</fullName>
    <formula>IF(AND(Promotional_Budget__c &gt; 0, Promotional_Budget_Used__c &gt; 0), Promotional_Budget_Used__c / Promotional_Budget__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotional Budget Used %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>