force-app/main/default/objects/Account/fields/Store_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Sub_Type__c</fullName>
    <label>Store Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Store_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Epicerie fine</fullName>
            </value>
            <value>
                <fullName>Mainstream</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
            <value>
                <fullName>Salle de concerts</fullName>
            </value>
            <value>
                <fullName>Grossiste</fullName>
            </value>
            <value>
                <fullName>Cash &amp; Carry</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Gastro</fullName>
            </value>
            <value>
                <fullName>Food &amp; Cocktails</fullName>
            </value>
            <value>
                <fullName>Brasserie</fullName>
            </value>
            <value>
                <fullName>Mixo</fullName>
            </value>
            <value>
                <fullName>Bars de Nuit</fullName>
            </value>
            <value>
                <fullName>Luxe</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Enjoy</fullName>
            </value>
            <value>
                <fullName>Cavistes</fullName>
            </value>
            <value>
                <fullName>American Bar</fullName>
            </value>
            <value>
                <fullName>Authentic Bar</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Cigar</fullName>
            </value>
            <value>
                <fullName>Curry</fullName>
            </value>
            <value>
                <fullName>Donburi</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Girls Bar</fullName>
            </value>
            <value>
                <fullName>Golf / Country Club</fullName>
            </value>
            <value>
                <fullName>Hamburger / Pizza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>